--- a/zhujian.html
+++ b/zhujian.html
@@ -6,11 +6,11 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--就用缩放-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    	<link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
+    	  <link href="http://cdn.bootcss.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+        <script src="http://cdn.bootcss.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
       <link href="css/docs.css" rel="stylesheet" type="text/css"/>
         <!--尽量使用最新的jquery版本-->
-    	<script src="http://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
-    	<script type="text/javascript" src="js/bootstrap.js"></script>
+    	<script src="http://cdn.bootcss.com/jquery/2.1.0/jquery.js"></script>
       <script type="text/javascript" src="js/application.js"></script>
     </head>
     <body data-spy="scroll" data-target=".scroll">
